# BoltBoard

./: .env.development  .env.production  .env.staging  .gitignore  README.md  package-lock.json  package.json
boltboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
boltboard/public/: 404.html  manifest.json
boltboard/src/: App.tsx  AppRoutes.tsx
boltboard/src/app/: Const.tsx  Entry.tsx
boltboard/src/misc/: request.ts
electron/: main.ts  package-lock.json  package.json  tsconfig.json
electron/src/: main.ts  native_tray.ts  render.ts  request.ts  tray.ts  type.ts  window.ts
public/: index.html
src/: App.tsx  AppRoutes.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: connection.rs  main.rs  native_tray.rs  trace.rs  tracing.rs  window.rs
src/admin/components/: AdminAppBar.tsx  AdminDrawer.tsx
src/admin/pages/: Dashboard.tsx  Login.tsx
src/admin/widgets/: ActivityWidget.tsx  BudgetWidget.tsx  CircleProgressWidget.tsx  OverviewWidget.tsx  ProgressWidget.tsx  SalesByAgeWidget.tsx  SalesByCategoryWidget.tsx  SalesHistoryWidget.tsx  TeamProgressWidget.tsx  UsersWidget.tsx
src/connection/: ConnectionEntry.tsx  ConnectionGroup.tsx  ConnectionPage.tsx
src/misc/: request.tsx
src/mitm/: MitmData.tsx  MitmEntry.tsx  MitmGroup.tsx  MitmPage.tsx
src/proxy/: Login.tsx  ProxyGroup.tsx  ProxyPage.tsx  ProxyWidget.tsx
tray-menu/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
tray-menu/src/: App.tsx  main.tsx
(+71 files in other folders)
