[package]
name = "boltboard-tauri"
version = "0.1.0"
description = "Tauri implementation of Boltboard"
authors = ["XOR-op"]
default-run = "boltboard-tauri"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std"] }
fastrand = "2.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tarpc = { version = "0.33.0", features = ["serde-transport", "unix", "serde-transport-bincode"] }
tauri = { version = "1.4.1", features = ['icon-png',"system-tray"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread", "net", "sync", "io-util", "macros", "signal", "time"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std", "fmt", "json"] }


boltapi = { git = "https://github.com/XOR-op/BoltConn" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
